cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_292.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bf_nbio.c:176: error: DEAD_STORE
  The value written to &ret (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bf_nbio.c:176:5: Write of unused value
174.   static long nbiof_callback_ctrl(BIO *b, int cmd, BIO_info_cb *fp)
175.   {
176.       long ret = 1;
           ^
177.   
178.       if (b->next_bio == NULL)
